--- a/discord-api/package.json
+++ b/discord-api/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "discord-interactions": "^3.2.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
