Adding Oauth for the Frontier and some commands

--- a/discord-api/.env.sample
+++ b/discord-api/.env.sample
@@ -1,3 +1,10 @@
 APP_ID=<YOUR_APP_ID>
 DISCORD_TOKEN=<YOUR_BOT_TOKEN>
 PUBLIC_KEY=<YOUR_PUBLIC_KEY>
+
+# Database
+DATABASE_URL=postgresql://user:password@localhost:5432/database
+
+# Frontier OAuth
+FRONTIER_CLIENT_ID=<YOUR_FRONTIER_CLIENT_ID>
+BASE_URL=https://pokedi.xyz/edfc
