--- a/discord-api/package.json
+++ b/discord-api/package.json
@@ -10,17 +10,24 @@
   "scripts": {
     "start": "node app.js",
     "register": "node commands.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
-  "author": "Shay DeWael",
+  "author": "PhoenixOnARoof",
   "license": "MIT",
   "dependencies": {
     "discord-interactions": "^3.2.0",
     "dotenv": "^16.0.3",
+    "drizzle-orm": "^0.45.1",
     "express": "^4.18.2",
+    "postgres": "^3.4.8",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.31.9",
     "nodemon": "^3.1.0"
   }
 }
