--- a/discord-api/package.json
+++ b/discord-api/package.json
@@ -19,10 +19,11 @@
   "author": "PhoenixOnARoof",
   "license": "MIT",
   "dependencies": {
-    "discord-interactions": "^3.2.0",
-    "dotenv": "^16.0.3",
+    "discord-interactions": "^4.4.0",
+    "dotenv": "^17.3.1",
     "drizzle-orm": "^0.45.1",
-    "express": "^4.18.2",
+    "express": "^5.2.1",
+    "ioredis": "^5.9.3",
     "postgres": "^3.4.8",
     "tweetnacl": "^1.0.3"
   },
