🐞 fix: Quick Discord.JS migration

--- a/discord-api/.env.sample
+++ b/discord-api/.env.sample
@@ -1,9 +1,13 @@
 APP_ID=<YOUR_APP_ID>
 DISCORD_TOKEN=<YOUR_BOT_TOKEN>
 PUBLIC_KEY=<YOUR_PUBLIC_KEY>
+GUILD_ID=<OPTIONAL_GUILD_ID_FOR_TESTING>
 
 # Database
 DATABASE_URL=postgresql://user:password@localhost:5432/database
+
+# Redis
+REDIS_URL=redis://localhost:6379
 
 # Frontier OAuth
 FRONTIER_CLIENT_ID=<YOUR_FRONTIER_CLIENT_ID>
