--- a/discord-api/package.json
+++ b/discord-api/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "getting-started",
+  "name": "edfc-discord-bot",
   "version": "1.0.0",
-  "description": "Discord example app",
-  "main": "app.js",
+  "description": "Elite Dangerous Fleet Carrier Discord Bot",
+  "main": "src/bot.js",
   "type": "module",
   "engines": {
     "node": ">=20.x"
   },
   "scripts": {
-    "start": "node app.js",
-    "register": "node commands.js",
-    "dev": "nodemon app.js",
+    "start": "node src/bot.js",
+    "dev": "nodemon src/bot.js",
+    "register": "node src/utils/registerCommands.js",
+    "register-guild": "node src/utils/registerCommands.js --guild",
+    "register-user": "node src/utils/registerCommands.js --user",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
@@ -19,13 +21,12 @@
   "author": "PhoenixOnARoof",
   "license": "MIT",
   "dependencies": {
-    "discord-interactions": "^4.4.0",
+    "discord.js": "^14.25.1",
     "dotenv": "^17.3.1",
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
     "ioredis": "^5.9.3",
-    "postgres": "^3.4.8",
-    "tweetnacl": "^1.0.3"
+    "postgres": "^3.4.8"
   },
   "devDependencies": {
     "drizzle-kit": "^0.31.9",
