--- a/discord-api/package.json
+++ b/discord-api/package.json
@@ -21,6 +21,7 @@
   "author": "PhoenixOnARoof",
   "license": "MIT",
   "dependencies": {
+    "discord-interactions": "^4.4.0",
     "discord.js": "^14.25.1",
     "dotenv": "^17.3.1",
     "drizzle-orm": "^0.45.1",
