--- a/discord-api/package.json
+++ b/discord-api/package.json
@@ -8,7 +8,7 @@
     "node": ">=20.x"
   },
   "scripts": {
-    "start": "node src/bot.js",
+    "start": "node bot.js",
     "dev": "nodemon src/bot.js",
     "register": "node src/utils/registerCommands.js",
     "register-guild": "node src/utils/registerCommands.js --guild",
