--- a/discord-api/package.json
+++ b/discord-api/package.json
@@ -19,6 +19,7 @@
   "author": "PhoenixOnARoof",
   "license": "MIT",
   "dependencies": {
+    "csv-parse": "^6.1.0",
     "discord-interactions": "^4.4.0",
     "discord.js": "^14.25.1",
     "dotenv": "^17.3.1",
